# Sematic-Parsing

./: .gitignore  AMR_Universal_Notebook.ipynb  COLAB_TRAINING_GUIDE.md  LICENSE  README.md  Sematic Parsing 1.txt  code_base.py  colab_train.py  comprehensive_test.py  create_sample_data.py  demo_progress_bars.py  deploy.py  gradio_app.py  main.py  optimize_colab.py  pyproject.toml  requirements.txt  run.py  test.py  test_simple.py
.docs/: DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md
amr_vn/: __init__.py  cli.py  config.py  data.py  demo.py  evaluator.py  inference.py  modeling.py  preprocess.py  trainer.py
amr_vn/utils/: penman.py
config/: colab_config.yaml  colab_fast_config.yaml  colab_ultra_fast_config.yaml  default_config.yaml  local_config.yaml  local_test_config.yaml  minimal_config.yaml
data/processed_local/: amr_training_data.jsonl  test.jsonl  train.jsonl  val.jsonl
data/test/: more_sentences.txt  public_test.txt  sample_sentences.txt  small_test.txt
data/train/: sample_amr.txt  train_amr_2.txt  train_split.txt
notebooks/: eda_and_pipeline_overview.ipynb  semantic_parsing.ipynb  train_model.ipynb
references/: references.md
scripts/: gradio_app.py  predict.py
src/: __init__.py  amr_demo.py  amr_evaluator.py  amr_prediction.py  amr_processor.py  amr_tokenizer.py  amr_trainer.py
src/data/: amr_processor.py  amr_to_json.py  tokenize_data.py
src/data_processing/: __init__.py  amr_processor.py  data_loader.py
src/evaluation/: __init__.py  evaluator.py
src/inference/: __init__.py  predictor.py
src/models/: evaluate.py  inference.py  train.py
(+8 files in other folders)
