[project]
name = "semantic-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "pyvi>=0.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.55.1",
    "wandb>=0.21.1",
]
